--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "testing-sails",
+  "private": true,
   "version": "0.0.1",
   "description": "Something to test the world of sails",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "debug": "node debug app.js"
   },
   "repository": {
     "type": "git",
@@ -22,8 +24,12 @@
   },
   "homepage": "https://github.com/ninjapanzer/testing_sails",
   "dependencies": {
-    "sails": "^0.9.16",
+    "sails": "0.9.16",
     "waterlock": "0.0.10",
-    "protractor": "^1.0.0-rc6"
+    "protractor": "1.0.0-rc6",
+    "grunt": "0.4.1",
+    "sails-disk": "~0.9.0",
+    "ejs": "0.8.4",
+    "optimist": "0.3.4"
   }
 }
