--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "grunt": "0.4.1",
     "sails-disk": "~0.9.0",
     "ejs": "0.8.4",
-    "optimist": "0.3.4"
+    "optimist": "0.3.4",
+    "node-bourbon": "~1.2.3",
+    "node-neat": "~1.3.0",
+    "grunt-contrib-sass": "^0.7.3"
   }
 }
