--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "optimist": "0.3.4",
     "node-bourbon": "~1.2.3",
     "node-neat": "~1.3.0",
-    "grunt-contrib-sass": "^0.7.3"
+    "grunt-contrib-sass": "^0.7.3",
+    "jade": "^1.4.2",
+    "marked": "^0.3.2"
   }
 }
